force-app/main/default/objects/Staged_Program_Batch__c/Staged_Program_Batch__c.object-meta.xml
<CustomObject>
    <description>Represents a collection of staged programs</description>
    <label>Staged Program Batch</label>
    <nameField>
        <displayFormat>SPB-{00000}</displayFormat>
        <label>Staged Program Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staged Program Batches</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>