force-app/main/default/objects/Staged_Program_Batch__c/fields/Batch_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Completed_Date_Time__c</fullName>
    <label>Batch Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>