force-app/main/default/objects/Staged_Program_Batch__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Session</label>
    <referenceTo>TREX1__Session__c</referenceTo>
    <relationshipLabel>Staged Program Batches</relationshipLabel>
    <relationshipName>Staged_Program_Batches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>