force-app/main/default/objects/Staged_Program_Batch__c/listViews/Completed_Batches.listView-meta.xml
<ListView>
    <fullName>Completed_Batches</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Session__c</columns>
    <columns>Batch_Completed_Date_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Completed Batches</label>
</ListView>