force-app/main/default/objects/Staged_Program_Batch__c/listViews/My_Unprocessed_Batches.listView-meta.xml
<ListView>
    <fullName>My_Unprocessed_Batches</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Session__c</columns>
    <columns>Batch_Completed_Date_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Cancelled</value>
    </filters>
    <label>My Unprocessed Batches</label>
</ListView>